--- a/index.html
+++ b/index.html
@@ -16,10 +16,15 @@
         </section>
 <section class="conteudo">
 <p>[]FETEC (Virtual)-25/09</p>
+<a href="https://sites.google.com/ifc.edu.br/fetec2024/">Portal FETEC</a>
 <p>[]FECI-TOO (Toledo)-30/10</p>
+<a href="https://www.unioeste.br/portal/feci-too/v-feci-too-2024#:~:text=As%20inscri%C3%A7%C3%B5es%20para%20submiss%C3%A3o%20de,no%20regulamento%20dispon%C3%ADvel%20a%20seguir.">Portal FECI-TOO</a>
 <p>[]FEBRATEC (Virtual)-04/11</p>
+<a href="http://febratecdf.com.br/">Portal FEBRATEC</a>
 <p>[]FEMIC (Virtual)-09/11</p>
+<a href="https://femic.com.br/">Portal FEMIC</a>
 <p>[]FIciências (Foz do Iguaçu)-25/11</p>
+<a href="https://ficiencias.org/">Portal FIciências</a>
 </section>
     </div>
 </body>
