--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <section class="inicio">
             <h2 class="subtitulo">Programação das feiras de 2024 (atualizado)</h2>
         </section>
-<section class="conteudo">
+<section class="feiras">
 <p>[]FETEC (Virtual)-25/09</p>
 <a href="https://sites.google.com/ifc.edu.br/fetec2024/">Portal FETEC</a>
 <p>[]FECI-TOO (Toledo)-30/10</p>
@@ -25,6 +25,12 @@
 <a href="https://femic.com.br/">Portal FEMIC</a>
 <p>[]FIciências (Foz do Iguaçu)-25/11</p>
 <a href="https://ficiencias.org/">Portal FIciências</a>
+</section>
+<section class="avaliacao">
+<h3>Melhorias para as Feiras</h3>
+<p></p>
+
+
 </section>
     </div>
 </body>
