--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h2 class="subtitulo">Programação das feiras de 2024 (atualizado)</h2>
         </section>
 <section class="feiras">
-<p>[]FETEC (Virtual)-17 a 24/09</p>
+<p>[]FETEC (Virtual)-19 a 23/09</p>
 <a href="https://degraus0.wixsite.com/fetec">Portal FETEC</a>
 <p>[]FECI-TOO (Toledo)-30/10</p>
 <a href="https://www.unioeste.br/portal/feci-too/v-feci-too-2024#:~:text=As%20inscri%C3%A7%C3%B5es%20para%20submiss%C3%A3o%20de,no%20regulamento%20dispon%C3%ADvel%20a%20seguir.">Portal FECI-TOO</a>
@@ -27,8 +27,8 @@
 <a href="https://ficiencias.org/">Portal FIciências</a>
 </section>
 <section class="avaliacao">
-<h3>Melhorias para as Feiras</h3>
-<p></p>
+<h3 class="titulo-avaliacao">Melhorias para as Feiras</h3>
+<p>Metodologia: 9, 9, 10 (média=9,34)</p>
 
 
 </section>
