--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 </section>
 <section class="avaliacao">
 <h2 class="titulo-avaliacao">Melhorias para as Feiras</h2>
+<div class="tabela">
 <p>Metodologia: 9, 9, 10 (média=9,34)</p>
-
+</div>
 
 </section>
     </div>
