--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="topo">
 <h1 class="titulo">Agenda das Feiras</h1>
     </header>
-    <div class="principal">
+    <section class="principal">
         <section class="inicio">
             <h2 class="subtitulo">Programação das feiras de 2024 (atualizado)</h2>
         </section>
@@ -32,6 +32,6 @@
 <p>Metodologia: 9, 9, 10 (média=9,34)</p>
 </section>
 </section>
-    </div>
+</section>
 </body>
 </html>
