--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="tudo">
     <header class="topo">
 <h1 class="titulo">Agenda das Feiras</h1>
     </header>
-    <section class="principal">
         <section class="inicio">
             <h2 class="subtitulo">Programação das feiras de 2024 (atualizado)</h2>
         </section>
