--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="tudo">
+    <div class="tudo">
     <header class="topo">
 <h1 class="titulo">Agenda das Feiras</h1>
     </header>
@@ -32,6 +32,6 @@
 <p>Metodologia: 9, 9, 10 (média=9,34)</p>
 </section>
 </section>
-</section>
+</div>
 </body>
 </html>
