--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <section class="avaliacao">
 <h2 class="titulo-avaliacao">Melhorias para as Feiras</h2>
 <section class="tabela">
-<p>Metodologia: 9, 9, 10 (média=9,34)</p>
+<p>Metodologia: 9, 9, 10 (média=9,34) Obs: Apresentar a metodologia de maneira "mais científica"</p>
 </section>
 </section>
 </div>
