--- a/index.html
+++ b/index.html
@@ -29,15 +29,16 @@
 <section class="avaliacao">
 <h2 class="titulo-avaliacao">Melhorias para as Feiras</h2>
 <section class="tabela">
-<p>Metodologia: 9, 9, 10 (média=9,34) Obs: Apresentar a metodologia de maneira "mais científica".</p>
-<p>Objetividade, Criatividade e Inovação: 8, 10, 9 (média=9) Obs: Ressaltar a autoria e criatividade na construção do projeto.</p>
-<p>Profundidade da Pesquisa: 8, 9, 9 (média=8,6) Obs: Adicionar mais conteúdos e assuntos dentro da pesquisa.</p>
-<p>Aplicabilidade do Projeto: 10, 10, 10 (média=10) Obs: Perfeito.</p>
-<p>Apresentação: 7, 9, 19 (média=8,6) Obs: Falar mais devagar, melhorar a dicção e treinar mais vezes.</p>
-<p>Diário de Bordo: 9, 9, 10 (média=9,34) Obs: Colocar as fotos que estão faltando e as logos da Escola e do Clube</p>
-<p>Pasta de Anexos: 9, 10, 10 (média=9,6) Obs: Mostrar mais as imagens da pasta durante as apresentações.</p>
-<p>Relatório: 9, 10, 10 (média=9,6) Obs: Mostrar o relatório durante as apresentações.</p>
-<p>Organização e Limpeza do Estande: 10, 10, 10 (média=10) Obs: Perfeito.</p>
+<p>[M]Metodologia: 9, 9, 10 (média=9,34) Obs: Apresentar a metodologia de maneira "mais científica".</p>
+<p>[M]Objetividade, Criatividade e Inovação: 8, 10, 9 (média=9) Obs: Ressaltar a autoria e criatividade na construção do projeto.</p>
+<p>[R]Profundidade da Pesquisa: 8, 9, 9 (média=8,6) Obs: Adicionar mais conteúdos e assuntos dentro da pesquisa.</p>
+<p>[P]Aplicabilidade do Projeto: 10, 10, 10 (média=10) Obs: Perfeito.</p>
+<p>[R]Apresentação: 7, 9, 19 (média=8,6) Obs: Falar mais devagar, melhorar a dicção e treinar mais vezes.</p>
+<p>[M]Diário de Bordo: 9, 9, 10 (média=9,34) Obs: Colocar as fotos que estão faltando e as logos da Escola e do Clube</p>
+<p>[B]Pasta de Anexos: 9, 10, 10 (média=9,6) Obs: Mostrar mais as imagens da pasta durante as apresentações.</p>
+<p>[B]Relatório: 9, 10, 10 (média=9,6) Obs: Mostrar o relatório durante as apresentações.</p>
+<p>[P]Organização e Limpeza do Estande: 10, 10, 10 (média=10) Obs: Perfeito.</p>
+<h3>Legenda: R=ruim, M=médio, B=bom, P=perfeito</h3>
 </section>
 </section>
 </div>
