--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 <h3>Legenda: R=ruim, M=médio, B=bom, P=perfeito</h3>
 </section>
 </section>
+<footer class="rodape">
+</footer>
 </div>
 </body>
 </html>
