--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <h2 class="titulo-avaliacao">Melhorias para as Feiras</h2>
 <section class="tabela">
 <p>[M]Metodologia: 9, 9, 10 (média=9,34) Obs: Apresentar a metodologia de maneira "mais científica".</p>
-<p>[M]Objetividade, Criatividade e Inovação: 8, 10, 9 (média=9) Obs: Ressaltar a autoria e criatividade na construção do projeto.</p>
+<p>[M]Objetividade, Criatividade e Inovação: 8, 10, 9 (média=9) Obs: Ressaltar a autoria e criatividade na construção do projetoe apresentar de maneira mais objetiva.</p>
 <p>[R]Profundidade da Pesquisa: 8, 9, 9 (média=8,6) Obs: Adicionar mais conteúdos e assuntos dentro da pesquisa.</p>
 <p>[P]Aplicabilidade do Projeto: 10, 10, 10 (média=10) Obs: Perfeito.</p>
 <p>[R]Apresentação: 7, 9, 19 (média=8,6) Obs: Falar mais devagar, melhorar a dicção e treinar mais vezes.</p>
