--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 </section>
 </section>
 <footer class="rodape">
+    <h4 class="fim">Criado por: Douglas da Silva Raixz, 2024.</h4>
 </footer>
 </div>
 </body>
