--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h2 class="subtitulo">Programação das feiras de 2024 (atualizado)</h2>
         </section>
 <section class="feiras">
-<p>[]FETEC (Virtual)-19 a 23/09</p>
+<p>[?]FETEC (Virtual)-19 a 23/09</p>
 <a href="https://degraus0.wixsite.com/fetec">Portal FETEC</a>
 <p>[]FIMUCTI (Virtual)-17 a 21/10</p>
 <a href="https://www.facebook.com/fimucti/?locale=pt_BR">Portal FIMUCTI</a>
