--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 <section class="feiras">
 <p>[?]FETEC (Virtual)-19 a 23/09</p>
 <a href="https://degraus0.wixsite.com/fetec">Portal FETEC</a>
-<p>[]FIMUCTI (Virtual)-17 a 21/10</p>
-<a href="https://www.facebook.com/fimucti/?locale=pt_BR">Portal FIMUCTI</a>
+<p>[]FEMUCTI (Virtual)-17 a 21/10</p>
+<a href="https://www.facebook.com/fimucti/?locale=pt_BR">Portal FEMUCTI</a>
 <p>[]FECI-TOO (Toledo)-30/10</p>
 <a href="https://www.unioeste.br/portal/feci-too/v-feci-too-2024#:~:text=As%20inscri%C3%A7%C3%B5es%20para%20submiss%C3%A3o%20de,no%20regulamento%20dispon%C3%ADvel%20a%20seguir.">Portal FECI-TOO</a>
-<p>[]FEBRATEC (Virtual)-04/11</p>
+<p>[]FEBRATEC (Virtual)-04 a 07/11</p>
 <a href="http://febratecdf.com.br/">Portal FEBRATEC</a>
 <p>[]FEMIC (Virtual)-09/11</p>
 <a href="https://femic.com.br/">Portal FEMIC</a>
