--- a/index.html
+++ b/index.html
@@ -3,46 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agenda das Feiras</title>
+    <title>Agenda das Feiras de Ciências</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="tudo">
-    <header class="topo">
-<h1 class="titulo">Agenda das Feiras</h1>
-    </header>
-        <section class="inicio">
-            <h2 class="subtitulo">Programação das feiras de 2024 (atualizado)</h2>
-        </section>
-<section class="feiras">
-<p>[?]FETEC (Virtual)-19 a 23/09</p>
-<a href="https://degraus0.wixsite.com/fetec">Portal FETEC</a>
-<p>[]FEMUCTI (Virtual)-17 a 21/10</p>
-<a href="https://www.facebook.com/fimucti/?locale=pt_BR">Portal FEMUCTI</a>
-<p>[]FECI-TOO (Toledo)-30/10</p>
-<a href="https://www.unioeste.br/portal/feci-too/v-feci-too-2024#:~:text=As%20inscri%C3%A7%C3%B5es%20para%20submiss%C3%A3o%20de,no%20regulamento%20dispon%C3%ADvel%20a%20seguir.">Portal FECI-TOO</a>
-<p>[]FEBRATEC (Virtual)-04 a 07/11</p>
-<a href="http://febratecdf.com.br/">Portal FEBRATEC</a>
-<p>[]FEMIC (Virtual)-09/11</p>
-<a href="https://femic.com.br/">Portal FEMIC</a>
-<p>[]FIciências (Foz do Iguaçu)-25/11</p>
-<a href="https://ficiencias.org/">Portal FIciências</a>
-</section>
-<section class="avaliacao">
-<h2 class="titulo-avaliacao">Melhorias para as Feiras</h2>
-<section class="tabela">
-<p>[M]Metodologia: 9, 9, 10 (média=9,34) Obs: Apresentar a metodologia de maneira "mais científica".</p>
-<p>[M]Objetividade, Criatividade e Inovação: 8, 10, 9 (média=9) Obs: Ressaltar a autoria e criatividade na construção do projetoe apresentar de maneira mais objetiva.</p>
-<p>[R]Profundidade da Pesquisa: 8, 9, 9 (média=8,6) Obs: Adicionar mais conteúdos e assuntos dentro da pesquisa.</p>
-<p>[P]Aplicabilidade do Projeto: 10, 10, 10 (média=10) Obs: Perfeito.</p>
-<p>[R]Apresentação: 7, 9, 19 (média=8,6) Obs: Falar mais devagar, melhorar a dicção e treinar mais vezes.</p>
-<p>[M]Diário de Bordo: 9, 9, 10 (média=9,34) Obs: Colocar as fotos que estão faltando e as logos da Escola e do Clube</p>
-<p>[B]Pasta de Anexos: 9, 10, 10 (média=9,6) Obs: Mostrar mais as imagens da pasta durante as apresentações.</p>
-<p>[B]Relatório: 9, 10, 10 (média=9,6) Obs: Mostrar o relatório durante as apresentações.</p>
-<p>[P]Organização e Limpeza do Estande: 10, 10, 10 (média=10) Obs: Perfeito.</p>
-<h4>Legenda: R=ruim, M=médio, B=bom, P=perfeito</h4>
-</section>
-</section>
+    
 <footer class="rodape">
     <h3 class="fim">Criado por: Douglas da Silva Raixz, 2024.</h3>
 </footer>
