--- a/index.html
+++ b/index.html
@@ -7,10 +7,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-<footer class="rodape">
-    <h3 class="fim">Criado por: Douglas da Silva Raixz, 2024.</h3>
-</footer>
-</div>
-</body>
-</html>
+    <main>
+        <header>
+            <h3 class="titulo">Site do Douglas</h3>
+        </header>
+        <section class="container">
+            <span></span>
+            <section class="escola">
+                <h2>Escola</h2>
+            <article>
+                <div class="conteudo">
+                    <a href="https://classroom.google.com/">Google Classroom</a>
+                    <img src="img/image.png">
+                </div>
+            </article>
+            <footer>
+                <h3>Criado por RAIXZ, Douglas da Silva, 2024. Sem fins lucrativos.</h3>
+            </footer>
+                    </section>
+                    </main>
+            </body>
+            </html>
