--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
 <body>
     <main>
         <header>
-            <h3 class="titulo">Site do Douglas</h3>
+            <h3 class="titulo">Agendadas Feiras</h3>
         </header>
         <section class="container">
             <span></span>
-            <section class="escola">
-                <h2>Escola</h2>
             <article>
                 <div class="conteudo">
                     <a href="https://classroom.google.com/">Google Classroom</a>
