--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
     <main>
         <header>
-            <h3 class="titulo">Agendadas Feiras</h3>
+            <h3 class="titulo">Agenda das Feiras de Ciências</h3>
         </header>
         <section class="container">
             <span></span>
             <article>
                 <div class="conteudo">
-                    <a href="https://classroom.google.com/">Google Classroom</a>
-                    <img src="img/image.png">
+                    <a href=""></a>
+                    <img src="">
                 </div>
             </article>
             <footer>
