--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
                     <img src="">
                 </div>
             </article>
+            <article>
+                <div class="conteudo">
+                    <a href=""></a>
+                    <img src="">
+                </div>
+            </article>
+            <article>
+                <div class="conteudo">
+                    <a href=""></a>
+                    <img src="">
+                </div>
+            </article>
             <footer>
                 <h3>Criado por RAIXZ, Douglas da Silva, 2024. Sem fins lucrativos.</h3>
             </footer>
