--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         </header>
         <section class="container">
             <span></span>
+            <section class="Presenciais">
+                <h2>Presenciais</h2>
             <article>
                 <div class="conteudo">
                     <a href=""></a>
@@ -31,6 +33,31 @@
                     <img src="">
                 </div>
             </article>
+            <article>
+                <spam></spam>
+            </article>
+        </section>
+        <section class="Virtuais">
+            <h2>Virtuais</h2>
+            <article>
+                <div class="conteudo">
+                    <a href=""></a>
+                    <img src="">
+                </div>
+            </article>
+            <article>
+                <div class="conteudo">
+                    <a href=""></a>
+                    <img src="">
+                </div>
+            </article>
+            <article>
+                <div class="conteudo">
+                    <a href=""></a>
+                    <img src="">
+                </div>
+            </article>
+        </section>
             <footer>
                 <h3>Criado por RAIXZ, Douglas da Silva, 2024. Sem fins lucrativos.</h3>
             </footer>
