--- a/index.html
+++ b/index.html
@@ -17,20 +17,23 @@
                 <h2>Presenciais</h2>
             <article>
                 <div class="conteudo">
-                    <a href=""></a>
-                    <img src="">
+                    <a href="link  do portal"></a>
+                    <img src="imagem">
+                    <p>data</p>
                 </div>
             </article>
             <article>
                 <div class="conteudo">
-                    <a href=""></a>
-                    <img src="">
+                    <a href="link do portal"></a>
+                    <img src="imagem">
+                    <p>data</p>
                 </div>
             </article>
             <article>
                 <div class="conteudo">
-                    <a href=""></a>
-                    <img src="">
+                    <a href="link do portal"></a>
+                    <img src="imagem">
+                    <p>data</p>
                 </div>
             </article>
             <article>
@@ -41,20 +44,23 @@
             <h2>Virtuais</h2>
             <article>
                 <div class="conteudo">
-                    <a href=""></a>
-                    <img src="">
+                    <a href="link do portal"></a>
+                    <img src="imagem">
+                    <p>data</p>
                 </div>
             </article>
             <article>
                 <div class="conteudo">
-                    <a href=""></a>
-                    <img src="">
+                    <a href="link do portal"></a>
+                    <img src="imagem">
+                    <p>data</p>
                 </div>
             </article>
             <article>
                 <div class="conteudo">
-                    <a href=""></a>
-                    <img src="">
+                    <a href="link do portal"></a>
+                    <img src="imagem">
+                    <p>data</p>
                 </div>
             </article>
         </section>
